package enums;

public enum Sex {
    MALE,
    FEMALE,
}