package people;

public record   Action(String description, int surprise) {}
