package people;

interface People{
    String getName();
    boolean isMale();
    void say(String text);
}